+ OS/2 dlls added

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -291,6 +291,16 @@ ifeq ($(OS_TARGET),win32)
         $(COPY) $(CVSINSTALL)/binw32/*.ico $(INSTALL_BINDIR)
         $(COPY) $(CVSINSTALL)/binw32/*.dll $(INSTALL_BINDIR)
 endif
+# binos2 (emx.dll,emxwrap.dll,unzip32.dll,fp2.ico)
+ifeq ($(OS_TARGET),os2)
+        $(COPY) $(CVSINSTALL)/binos2/*.ico $(INSTALL_BINDIR)
+        $(COPY) $(CVSINSTALL)/binos2/*.dll $(INSTALL_BINDIR)
+endif
+# binos2 (emx.dll,emxwrap.dll,unzip32.dll,fp2.ico)
+ifeq ($(OS_TARGET),emx)
+        $(COPY) $(CVSINSTALL)/binos2/*.ico $(INSTALL_BINDIR)
+        $(COPY) $(CVSINSTALL)/binos2/*.dll $(INSTALL_BINDIR)
+endif
 # manpages for UNIX systems
 ifeq ($(OS_TARGET),linux)
         $(MAKE) -C $(CVSINSTALL)/man installman
