--- a/docs/datutex/Makefile
+++ b/docs/datutex/Makefile
@@ -59,19 +59,12 @@ OBJECTS=ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10 ex11 ex12\
         ex59 ex60 ex61 ex62 ex63 ex64 ex65 ex66 ex67 ex68 ex69 ex70\
         ex71 ex72 ex73 ex74 ex75 ex76 ex77 ex78 ex79 ex80 \
         ex81 ex82 ex83 ex84 ex85 ex86 ex87 ex88 ex89 ex90 ex91 ex92 \
-        ex93
+        ex93 ex94 ex95 ex96 ex97 ex98 ex99 ex100 ex101 ex102 ex103\
+        ex104 ex105 ex106
         
 # This might not be the same list as objects, since some of the
 # tests might be interactive.
-TOTEST=ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10 ex11 ex12\
-        ex13 ex14 ex15 ex16 ex17 ex18 ex19 ex20 ex21 ex22 ex23 ex24\
-        ex25 ex26 ex27 ex28 ex29 ex30 ex31 ex32 ex35 ex36\
-        ex37 ex39 ex41 ex42 ex43 ex44 ex45 ex46 ex47\
-        ex48 ex49 ex50 ex51 ex52 ex53 ex54 ex55 ex56 ex57 ex58\
-        ex59 ex60 ex61 ex62 ex63 ex64 ex65 ex66 ex67 ex68 ex69 ex70\
-        ex72 ex73 ex74 ex75 ex76 ex77 ex78 ex79 ex80 \
-        ex81 ex82 ex83 ex84 ex85 ex86 ex87 ex88 ex89 ex90 ex91 ex92 \
-        ex93    
+TOTEST=OBJECTS
 
 LOGFILE=$(addsuffix .log, $(TOTEST))
         
