* copy also fv,ide for deb and rpm

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -541,6 +541,8 @@ debcopy: distclean
         $(COPYTREE) compiler $(DEBSRCDIR)
         $(COPYTREE) rtl $(DEBSRCDIR)
         $(COPYTREE) fcl $(DEBSRCDIR)
+        $(COPYTREE) fv $(DEBSRCDIR)
+        $(COPYTREE) ide $(DEBSRCDIR)
         $(COPYTREE) packages $(DEBSRCDIR)
         $(COPYTREE) utils $(DEBSRCDIR)
         $(COPYTREE) demo $(DEBSRCDIR)
@@ -616,6 +618,8 @@ endif
         $(COPYTREE) compiler $(RPMSRCDIR)
         $(COPYTREE) rtl $(RPMSRCDIR)
         $(COPYTREE) fcl $(RPMSRCDIR)
+        $(COPYTREE) fv $(RPMSRCDIR)
+        $(COPYTREE) ide $(RPMSRCDIR)
         $(COPYTREE) packages $(RPMSRCDIR)
         $(COPYTREE) utils $(RPMSRCDIR)
         $(COPYTREE) demo $(RPMSRCDIR)
