* fp-units-fv added

--- a/install/debian/control
+++ b/install/debian/control
@@ -7,10 +7,10 @@ Build-Depends: fp-compiler, fp-utils, debhelper (>= 4.2), tetex-bin, tetex-extra
 
 Package: fp-compiler
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921)
-Suggests: fp-utils, fp-docs (>= 1.9.5)
+Depends: fp-units-rtl (= 1.9.6-1)
+Suggests: fp-utils, fp-docs (>= 1.9.6)
 Description: Free Pascal -- Compiler
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  Some extensions are added to the language, like function overloading. Shared
  libraries can be linked and created. Basic Delphi support is already
@@ -18,11 +18,24 @@ Description: Free Pascal -- Compiler
  command line compiler. You need at least the RTL package before you can start
  compiling anything.
 
+Package: fp-ide
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.6-1)
+Suggests: fp-utils, fp-docs (>= 1.9.6)
+Description: Free Pascal -- IDE
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
+ Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
+ Some extensions are added to the language, like function overloading. Shared
+ libraries can be linked and created. Basic Delphi support is already
+ implemented (classes, exceptions, ansistrings). This package contains the
+ Integrated Development Environment (IDE). The IDE has an internal compiler.
+ You need at least the RTL package before you can start  compiling anything.
+
 Package: fp-utils
 Architecture: i386 powerpc sparc amd64
-Recommends: fp-compiler (= 1.9.5-20040921)
+Recommends: fp-compiler (= 1.9.6-1)
 Description: Free Pascal -- Utils
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains some handy utils for usage with the Free Pascal
  Compiler:
@@ -40,24 +53,24 @@ Package: fp-docs
 Section: doc
 Architecture: all
 Description: Free Pascal -- Documentation
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the documentation for the Free Pascal Compiler.
  The documentation is available in HTML and in PDF.
 
 Package: fp-units-rtl
 Architecture: i386 powerpc sparc amd64
-Recommends: fp-compiler (= 1.9.5-20040921)
+Recommends: fp-compiler (= 1.9.6-1)
 Description: Free Pascal -- Runtime Library
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the Runtime Libraries for the Free Pascal Compiler.
 
 Package: fp-units-base
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1)
 Description: Free Pascal -- base units
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units for common libraries.  Some of these
  units are also required by the Free Component Library:
@@ -67,35 +80,43 @@ Description: Free Pascal -- base units
 
 Package: fp-units-fcl
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-base (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1), fp-units-base (= 1.9.6-1)
 Description: Free Pascal -- Free Component Library
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the Free Component Library for the Free Pascal Compiler.
 
+Package: fp-units-fv
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= 1.9.6-1)
+Description: Free Pascal -- Free Component Library
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
+ Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
+ This package contains the Free Vision units for the Free Pascal Compiler.
+
 Package: fp-units-gtk
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-fcl (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1), fp-units-fcl (= 1.9.6-1)
 Description: Free Pascal -- GTK 1.2 units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units and examples to create
  programs with GTK 1.2.
 
 Package: fp-units-gnome1
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-gtk (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1), fp-units-gtk (= 1.9.6-1)
 Description: Free Pascal -- GNOME 1 units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units and examples to create
  programs for GNOME 1.
 
 Package: fp-units-db
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1)
 Description: Free Pascal -- database libraries units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units with bindings for:
   - MySQL
@@ -108,9 +129,9 @@ Description: Free Pascal -- database libraries units
   
 Package: fp-units-gfx
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921), fp-units-base (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1), fp-units-base (= 1.9.6-1)
 Description: Free Pascal -- graphics libraries units
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units with bindings for:
   - Forms 0.88
@@ -120,19 +141,19 @@ Description: Free Pascal -- graphics libraries units
 
 Package: fp-units-net
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1)
 Description: Free Pascal -- networking units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units for creating network tools:
-  - Inet unit for easier TCP/IP handling
-  - UnCGI unit for easy CGI handling
+  - NetDB unit for TCP/IP handling
+  - LibAsync unit for easy Asynchronous IO
 
 Package: fp-units-misc
 Architecture: i386 powerpc sparc amd64
-Depends: fp-units-rtl (= 1.9.5-20040921)
+Depends: fp-units-rtl (= 1.9.6-1)
 Description: Free Pascal -- miscellaneous units
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  Free Pascal miscellaneous units for:
   - Utmp
