--- a/install/debian/control.in
+++ b/install/debian/control.in
@@ -10,7 +10,7 @@ Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Suggests: fp-utils, fp-docs (>= %{fpcversion})
 Description: Free Pascal -- Compiler
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  Some extensions are added to the language, like function overloading. Shared
  libraries can be linked and created. Basic Delphi support is already
@@ -23,7 +23,7 @@ Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Suggests: fp-utils, fp-docs (>= %{fpcversion})
 Description: Free Pascal -- IDE
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  Some extensions are added to the language, like function overloading. Shared
  libraries can be linked and created. Basic Delphi support is already
@@ -35,7 +35,7 @@ Package: fp-utils
 Architecture: i386 powerpc sparc amd64
 Recommends: fp-compiler (= %{packageversion})
 Description: Free Pascal -- Utils
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains some handy utils for usage with the Free Pascal
  Compiler:
@@ -53,7 +53,7 @@ Package: fp-docs
 Section: doc
 Architecture: all
 Description: Free Pascal -- Documentation
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the documentation for the Free Pascal Compiler.
  The documentation is available in HTML and in PDF.
@@ -62,7 +62,7 @@ Package: fp-units-rtl
 Architecture: i386 powerpc sparc amd64
 Recommends: fp-compiler (= %{packageversion})
 Description: Free Pascal -- Runtime Library
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the Runtime Libraries for the Free Pascal Compiler.
 
@@ -70,7 +70,7 @@ Package: fp-units-base
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- base units
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units for common libraries.  Some of these
  units are also required by the Free Component Library:
@@ -82,15 +82,23 @@ Package: fp-units-fcl
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-base (= %{packageversion})
 Description: Free Pascal -- Free Component Library
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains the Free Component Library for the Free Pascal Compiler.
+
+Package: fp-units-fv
+Architecture: i386 powerpc sparc amd64
+Depends: fp-units-rtl (= %{packageversion})
+Description: Free Pascal -- Free Component Library
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
+ Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
+ This package contains the Free Vision units for the Free Pascal Compiler.
 
 Package: fp-units-gtk
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-fcl (= %{packageversion})
 Description: Free Pascal -- GTK 1.2 units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units and examples to create
  programs with GTK 1.2.
@@ -99,7 +107,7 @@ Package: fp-units-gnome1
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-gtk (= %{packageversion})
 Description: Free Pascal -- GNOME 1 units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units and examples to create
  programs for GNOME 1.
@@ -108,7 +116,7 @@ Package: fp-units-db
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- database libraries units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units with bindings for:
   - MySQL
@@ -123,7 +131,7 @@ Package: fp-units-gfx
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion}), fp-units-base (= %{packageversion})
 Description: Free Pascal -- graphics libraries units
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units with bindings for:
   - Forms 0.88
@@ -135,7 +143,7 @@ Package: fp-units-net
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- networking units 
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  This package contains Free Pascal units for creating network tools:
   - NetDB unit for TCP/IP handling
@@ -145,7 +153,7 @@ Package: fp-units-misc
 Architecture: i386 powerpc sparc amd64
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal -- miscellaneous units
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32-bit
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32/64-bit
  Pascal Compiler. It comes with a fully compatible TP 7.0 runtime library.
  Free Pascal miscellaneous units for:
   - Utmp
