--- a/install/debian/README.Debian.in
+++ b/install/debian/README.Debian.in
@@ -2,22 +2,21 @@ The Free Pascal Compiler for Debian
 ----------------------
 
 The source tree was checked out from CVS at cvs.freepascal.org with
- 'cvs -d :pserver:cvs@cvs.freepascal.org:/FPC/CVS -z3 co -r RELEASE_1_9_4 fpc'
+ 'cvs -d :pserver:cvs@cvs.freepascal.org:/FPC/CVS -z3 co -r %{fpccvstag} fpc'
  (password: 'cvs')
 
-The Debian Build Directory was created with 'make debcopy FPC_VERSION=1.9.4'
-and then duplicated to .orig before 'dpkg-buildpackage -rfakeroot' was run.
+The Debian Build Directory was created with 'make debcopy' and then 
+duplicated to .orig before 'dpkg-buildpackage -rfakeroot' was run.
 
 Only PDF docs are built as shipped. You may want to make the HTML files with
-latex2html by yourself and eventually adapt the doc-base file.
+tex4ht by yourself and eventually adapt the doc-base file. Building the
+documents requires at least the following values in /etc/texmf/texmf.conf:
+save_size = 10000
 
 To create a new config file for fpc (/etc/fpc.cfg) use the command:
- /usr/lib/fpc/1.9.4/samplecfg /usr/lib/fpc/1.9.4
+ /usr/lib/fpc/%{fpcversion}/samplecfg /usr/lib/fpc/%{fpcversion}
 However, you should be aware that said file (/etc/fpc.cfg) is
 declared as a conffile since version 1.0.2.
-
-Free Vision (fp-fv) had to be removed due to licensing issues; it will return
-into the distribution as soon as these issues are resolved.
 
 And, yes - this is a i386/amd64/powerpc/sparc only package currently.
 
@@ -30,17 +29,18 @@ The Original site is
   ftp://ftp.freepascal.org/
 
 HTTP Mirrored at
-  http://www.zeus.rug.ac.be/freepascal/
+  http://www.nl.freepascal.org/
+  http://www.de.freepascal.org/
+  http://www.freepascal.sk/
   http://gd.tuwien.ac.at/languages/pascal/fpc/www/
   http://www.atlasz.com/freepascal/
-  http://deadlock.et.tudelft.nl/~fpc/
-  http://www.freepascal.sk/
-  http://ipbm.simr.pw.edu.pl/users/ftp-pub/mirrors/tfdec1.fys.kuleuven.ac.be/%257Emichael/fpc/
 
 FTP Mirrored at
+  ftp://ftp.nl.freepascal.org/pub/fpc/
+  ftp://ftp.de.freepascal.org/pub/fpc/
+  ftp://ftp.us.freepascal.org/pub/fpc/
+  ftp://freepascal.stack.nl/pub/fpc/
   ftp://ftp.epix.net/pub/languages/pascal/
   ftp://ftp.techgnosis.net/pub/fpc/
   ftp://ftp.fisek.com.tr/pub/fpc/
   http://clubinfo.collegebdeb.qc.ca/nuitari/fpc/
-
-
