--- a/install/debian/fp-utils.install.in
+++ b/install/debian/fp-utils.install.in
@@ -16,9 +16,18 @@
 /usr/bin/fprcp
 /usr/bin/fpdoc
 /usr/bin/makeskel
+/usr/bin/unitdiff
+/usr/bin/mkxmlrpc
 /usr/lib/fpc/%{fpcversion}/units/%{fpctarget}/lexyacc
 /usr/lib/fpc/lexyacc/yylex.cod
 /usr/lib/fpc/lexyacc/yyparse.cod
+/usr/share/man/man1/bin2obj.1
+/usr/share/man/man1/data2inc.1
+/usr/share/man/man1/fprcp.1
+/usr/share/man/man1/h2paspp.1
+/usr/share/man/man1/makeskel.1
+/usr/share/man/man1/postw32.1
+/usr/share/man/man1/unitdiff.1
 /usr/share/man/man1/delp.1
 /usr/share/man/man1/fpcmake.1
 /usr/share/man/man1/h2pas.1
