--- a/rtl/morphos/Makefile.fpc
+++ b/rtl/morphos/Makefile.fpc
@@ -13,7 +13,7 @@ units=$(SYSTEMUNIT) objpas macpas strings \
       charset ucomplex getopts matrix \
       variants types rtlconst sysconst dateutil \
       exec timer doslib utility hardware inputevent graphics layers \
-      intuition clipboard 
+      intuition clipboard get9
 rsts=math rtlconst varutils typinfo variants classes sysconst dateutil
 
 [require]
