--- a/install/debian/fp-compiler.postinst.in
+++ b/install/debian/fp-compiler.postinst.in
@@ -7,7 +7,7 @@ FPCDIR=/usr/lib/fpc/%{fpcversion}
 # add alternative
 update-alternatives \
     --install /usr/bin/pc pc /usr/bin/fpc 20 \
-    --slave /usr/share/man/man1/fpc.1.gz fpc.1.gz /usr/share/man/man1/fpc.1.gz
+    --slave /usr/share/man/man1/pc.1.gz fpc.1.gz /usr/share/man/man1/fpc.1.gz
 
 # create link
 ln -sf $FPCDIR/%{ppcbin} /usr/bin/%{ppcbin}
